--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+zig/
+zig-out/
+
 zig-cache/
 .zig-cache/
 zig-macos-x86_64-0.8.0-dev.2729+87dae0ce9 zig-macos-x86_64-0.8.0-dev.2729+87dae0ce9.tar.xz
