--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@ zig-macos-x86_64-0.8.0-dev.2729+87dae0ce9 zig-macos-x86_64-0.8.0-dev.2729+87dae0
 *.tar.xz
 zig-macos*/
 
+node_modules/
+
 *.swp
+.DS_Store
 
 *.db
+data/
+
